plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'dev.kostromdan.mods'
version = ''

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
    implementation 'org.apache.logging.log4j:log4j-api:2.24.2'
    implementation 'com.electronwill.night-config:toml:3.6.4'
    implementation 'com.electronwill.night-config:json:3.6.4'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'gs.mclo:api:4.0.1'

    implementation project(path: ':common_config')
}

jar {
    manifest {
        attributes(
                'Main-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.Boot',
                'Launcher-Agent-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent',
                'Agent-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent',
                'Premain-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.CrashAssistantAgent'
        )
    }
}

shadowJar {
    dependsOn(':common_config:build')
    archiveClassifier.set('')
    dependencies {
        exclude(dependency('org.apache.logging.log4j:.*'))
        exclude(dependency('com.google.code.gson:.*'))
        exclude(dependency('commons-io:commons-io:2.15.1'))
    }
}

build.finalizedBy(shadowJar)